--- a/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-2.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[7, 77, 69, 52, 68, 33, 61, 9, 15, 32, 87, 53, 4, 16, 86, 13, 27, 60, 36, 58, 42, 85, 35, 96, 18, 63, 76, 2, 41, 43, 92, 11, 70, 88, 83, 65, 72, 24, 62, 6, 99, 98, 30, 49, 46, 34, 66, 82, 54, 1, 38, 37, 55, 80, 3, 14, 47, 90, 23, 67, 64, 25, 12, 97, 28, 81, 22, 10, 40, 94, 21, 17, 5, 31, 20, 19, 89, 91, 74, 8]\n"
+      "[64, 98, 74, 30, 76, 25, 23, 83, 21, 63, 26, 32, 59, 45, 72, 20, 38, 71, 43, 77, 93, 79, 94, 37, 75, 48, 28, 0, 36, 18, 4, 86, 58, 8, 15, 82, 33, 50, 85, 27, 34, 73, 61, 41, 81, 89, 22, 88, 56, 44, 65, 78, 66, 70, 11, 99, 60, 80, 10, 52, 95, 67, 97, 13, 51, 69, 9, 84, 47, 40, 90, 53, 24, 57, 12, 17, 5, 91, 46, 49]\n"
      ]
     }
    ],
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 52, 53, 54, 55, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 74, 76, 77, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n"
+      "{0, 4, 5, 8, 9, 10, 11, 12, 13, 15, 17, 18, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 36, 37, 38, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 56, 57, 58, 59, 60, 61, 63, 64, 65, 66, 67, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 88, 89, 90, 91, 93, 94, 95, 97, 98, 99}\n"
      ]
     }
    ],
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,14 +111,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[47, 29, 16, 2, 31, 99, 53, 31, 33, 66, 13, 50, 77, 32, 24, 15, 79, 46, 16, 60, 58, 46, 46, 71, 31, 13, 23, 50, 74, 53, 33, 88, 58, 88, 28, 0, 88, 50, 15, 36, 7, 73, 1, 5, 77, 6, 29, 23, 4, 63, 13, 86, 76, 50, 0, 69, 51, 1, 51, 0, 30, 36, 60, 57, 91, 36, 55, 55, 89, 4, 38, 13, 96, 86, 35, 24, 59, 58, 73, 22]\n"
+      "[90, 30, 22, 91, 85, 82, 44, 71, 94, 1, 51, 4, 69, 26, 43, 95, 5, 83, 94, 82, 3, 54, 76, 96, 50, 72, 50, 68, 59, 59, 61, 9, 17, 90, 6, 20, 56, 58, 74, 89, 76, 56, 0, 21, 98, 84, 86, 76, 25, 98, 40, 72, 37, 22, 15, 60, 82, 10, 24, 61, 49, 81, 86, 95, 33, 82, 36, 59, 24, 2, 60, 84, 22, 7, 20, 56, 98, 55, 56, 59]\n"
      ]
     }
    ],
@@ -139,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "47"
+       "54"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,14 +169,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{3, 8, 9, 10, 11, 12, 14, 17, 18, 19, 20, 21, 25, 27, 34, 37, 40, 41, 42, 43, 49, 52, 54, 61, 62, 64, 65, 67, 68, 70, 72, 80, 81, 82, 83, 85, 87, 90, 92, 94, 97, 98}\n"
+      "{8, 11, 12, 13, 18, 23, 27, 28, 32, 34, 38, 41, 45, 46, 47, 48, 52, 53, 57, 63, 64, 65, 66, 67, 70, 73, 75, 77, 78, 79, 80, 88, 93, 97, 99}\n"
      ]
     }
    ],
@@ -195,14 +195,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 71, 73, 79, 50, 51, 57, 59, 29}\n"
+      "{96, 1, 2, 3, 68, 6, 7, 54, 55}\n"
      ]
     }
    ],
@@ -221,14 +221,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 4, 5, 6, 7, 13, 15, 16, 22, 23, 24, 28, 30, 31, 32, 33, 35, 36, 38, 46, 47, 53, 55, 58, 60, 63, 66, 69, 74, 76, 77, 86, 88, 89, 91, 96, 99}\n"
+      "{0, 4, 5, 9, 10, 15, 17, 20, 21, 22, 24, 25, 26, 30, 33, 36, 37, 40, 43, 44, 49, 50, 51, 56, 58, 59, 60, 61, 69, 71, 72, 74, 76, 81, 82, 83, 84, 85, 86, 89, 90, 91, 94, 95, 98}\n"
      ]
     }
    ],
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -263,10 +263,10 @@
      "output_type": "stream",
      "text": [
       "80\n",
-      "47\n",
-      "42\n",
+      "54\n",
+      "35\n",
       "9\n",
-      "38\n"
+      "45\n"
      ]
     }
    ],
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -306,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 52, 53, 54, 55, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 74, 76, 77, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n"
+      "{0, 4, 5, 8, 9, 10, 11, 12, 13, 15, 17, 18, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 36, 37, 38, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 56, 57, 58, 59, 60, 61, 63, 64, 65, 66, 67, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 88, 89, 90, 91, 93, 94, 95, 97, 98, 99}\n"
      ]
     }
    ],
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -341,7 +341,7 @@
      "text": [
       "80\n",
       "80\n",
-      "{1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 52, 53, 54, 55, 58, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 72, 74, 76, 77, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n",
+      "{0, 4, 5, 8, 9, 10, 11, 12, 13, 15, 17, 18, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 36, 37, 38, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 56, 57, 58, 59, 60, 61, 63, 64, 65, 66, 67, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 88, 89, 90, 91, 93, 94, 95, 97, 98, 99}\n",
       "80\n"
      ]
     }
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -411,14 +411,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 76, 77, 79, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n"
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 17, 18, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 36, 37, 38, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 88, 89, 90, 91, 93, 94, 95, 96, 97, 98, 99}\n"
      ]
     }
    ],
@@ -432,14 +432,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 40, 41, 42, 43, 46, 47, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 76, 77, 79, 80, 81, 82, 83, 85, 86, 87, 88, 89, 90, 91, 92, 94, 96, 97, 98, 99}\n"
+      "{0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 15, 17, 18, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 36, 37, 38, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 88, 89, 90, 91, 93, 94, 95, 96, 97, 98, 99}\n"
      ]
     }
    ],
@@ -457,20 +457,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n"
+      "0\n"
      ]
     }
    ],
    "source": [
     "# Your code here\n",
-    "\n",
     "set12= set1.pop()\n",
     "print(set12)\n",
     "#Remove a random item from the set and don't show it after (hangman!!!)"
@@ -478,14 +477,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{2, 3, 4, 5, 6, 7, 8, 10, 12, 13, 14, 15, 16, 17, 18, 20, 22, 23, 24, 25, 27, 28, 30, 32, 33, 34, 35, 36, 37, 38, 40, 42, 43, 46, 47, 52, 53, 54, 55, 58, 60, 62, 63, 64, 65, 66, 67, 68, 70, 72, 74, 76, 77, 80, 82, 83, 85, 86, 87, 88, 90, 92, 94, 96, 97, 98}\n"
+      "{4, 5, 8, 9, 10, 11, 12, 13, 15, 17, 18, 20, 21, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 36, 37, 38, 40, 41, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 56, 57, 58, 59, 60, 61, 63, 64, 65, 66, 67, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 88, 89, 90, 91, 93, 94, 95, 97, 98, 99}\n"
      ]
     }
    ],
@@ -506,18 +505,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Your code here\n",
     "list_to_remove = [1, 9, 11, 19, 21, 29, 31, 39, 41, 49, 51, 59, 61, 69, 71, 79, 81, 89, 91, 99]\n",
-    "# set13=set()\n",
-    "for i in list_to_remove:\n",
-    "    if i in set1:\n",
-    "        set1.remove(i)\n",
-    "# set13 = set1\n",
-    "        "
+    "set13 = set(list_to_remove)\n",
+    "# set13=set()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set14 = set1-set13"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{4, 5, 8, 10, 12, 13, 15, 17, 18, 20, 22, 23, 24, 25, 26, 27, 28, 30, 32, 33, 34, 36, 37, 38, 40, 43, 44, 45, 46, 47, 48, 50, 52, 53, 56, 57, 58, 60, 63, 64, 65, 66, 67, 70, 72, 73, 74, 75, 76, 77, 78, 80, 82, 83, 84, 85, 86, 88, 90, 93, 94, 95, 97, 98}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(set14)\n",
+    "#I removed  all the element in the set1 who were in list_to_remove. For this I change my list 'list_to_remove' to a set, \n",
+    "#I couldn't do an operation with a set and a list, the both should be with the same type and it's more easy with set, there is no order"
    ]
   }
  ],
