--- a/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
+++ b/module-1/lab-tuple-set-dict/your-code/challenge-3.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
        "dict_keys(['love', 'conversation', 'every', \"we're\", 'plate', 'sour', 'jukebox', 'now', 'taxi', 'fast', 'bag', 'man', 'push', 'baby', 'going', 'you', \"don't\", 'one', 'mind', 'backseat', 'friends', 'then', 'know', 'take', 'play', 'okay', 'so', 'begin', 'start', 'over', 'body', 'boy', 'just', 'we', 'are', 'girl', 'tell', 'singing', 'drinking', 'put', 'our', 'where', \"i'll\", 'all', \"isn't\", 'make', 'lover', 'get', 'radio', 'give', \"i'm\", 'like', 'can', 'doing', 'with', 'club', 'come', 'it', 'somebody', 'handmade', 'out', 'new', 'room', 'chance', 'follow', 'in', 'may', 'brand', 'that', 'magnet', 'up', 'first', 'and', 'pull', 'of', 'table', 'much', 'last', 'i', 'thrifty', 'grab', 'was', 'driver', 'slow', 'dance', 'the', 'say', 'trust', 'family', 'week', 'date', 'me', 'do', 'waist', 'smell', 'day', 'although', 'your', 'leave', 'want', \"let's\", 'lead', 'at', 'hand', 'how', 'talk', 'not', 'eat', 'falling', 'about', 'story', 'sweet', 'best', 'crazy', 'let', 'too', 'van', 'shots', 'go', 'to', 'a', 'my', 'is', 'place', 'find', 'shape', 'on', 'kiss', 'were', 'night', 'heart', 'for', 'discovering', 'something', 'be', 'bedsheets', 'fill', 'hours', 'stop', 'bar'])"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -201,23 +201,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
+   "execution_count": 17,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Series([], dtype: object)"
+       "bar             1\n",
+       "let             1\n",
+       "van             1\n",
+       "out             1\n",
+       "it              1\n",
+       "shots           1\n",
+       "club            1\n",
+       "can             1\n",
+       "chance          1\n",
+       "place           1\n",
+       "radio           1\n",
+       "lover           1\n",
+       "make            1\n",
+       "isn't           1\n",
+       "all             1\n",
+       "i'll            1\n",
+       "where           1\n",
+       "give            1\n",
+       "our             1\n",
+       "best            1\n",
+       "stop            1\n",
+       "at              1\n",
+       "date            1\n",
+       "week            1\n",
+       "family          1\n",
+       "trust           1\n",
+       "hand            1\n",
+       "dance           1\n",
+       "sweet           1\n",
+       "slow            1\n",
+       "               ..\n",
+       "something       6\n",
+       "discovering     6\n",
+       "new             6\n",
+       "brand           6\n",
+       "every           6\n",
+       "of              6\n",
+       "i               6\n",
+       "lead            6\n",
+       "day             6\n",
+       "follow          6\n",
+       "shape           6\n",
+       "we              7\n",
+       "a               8\n",
+       "like           10\n",
+       "me             10\n",
+       "now            11\n",
+       "baby           14\n",
+       "you            16\n",
+       "be             16\n",
+       "body           17\n",
+       "the            18\n",
+       "your           21\n",
+       "with           22\n",
+       "i'm            23\n",
+       "and            23\n",
+       "love           25\n",
+       "in             27\n",
+       "my             33\n",
+       "come           37\n",
+       "on             40\n",
+       "Length: 140, dtype: int64"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "word_freq2  = pd.Series(word_freq,index=word_freq.keys())\n"
+    "word_freq2  = pd.Series(word_freq,index=word_freq.keys())\n",
+    "# word_freq2\n",
+    "word_freq2.sort_values()"
    ]
   },
   {
@@ -231,26 +296,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 33,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "No axis named word for object type <class 'pandas.core.series.Series'>",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-27-71e8737d5419>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Your code here\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mword_freq2\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort_values\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'word'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mascending\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mFalse\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\series.py\u001b[0m in \u001b[0;36msort_values\u001b[1;34m(self, axis, ascending, inplace, kind, na_position)\u001b[0m\n\u001b[0;32m   2444\u001b[0m         \"\"\"\n\u001b[0;32m   2445\u001b[0m         \u001b[0minplace\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mvalidate_bool_kwarg\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minplace\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'inplace'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 2446\u001b[1;33m         \u001b[0maxis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_get_axis_number\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   2447\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   2448\u001b[0m         \u001b[1;31m# GH 5856/5853\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\pandas\\core\\generic.py\u001b[0m in \u001b[0;36m_get_axis_number\u001b[1;34m(self, axis)\u001b[0m\n\u001b[0;32m    373\u001b[0m                 \u001b[1;32mpass\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    374\u001b[0m         raise ValueError('No axis named {0} for object type {1}'\n\u001b[1;32m--> 375\u001b[1;33m                          .format(axis, type(self)))\n\u001b[0m\u001b[0;32m    376\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    377\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0m_get_axis_name\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: No axis named word for object type <class 'pandas.core.series.Series'>"
-     ]
+     "data": {
+      "text/plain": [
+       "on             40\n",
+       "come           37\n",
+       "my             33\n",
+       "in             27\n",
+       "love           25\n",
+       "and            23\n",
+       "i'm            23\n",
+       "with           22\n",
+       "your           21\n",
+       "the            18\n",
+       "body           17\n",
+       "be             16\n",
+       "you            16\n",
+       "baby           14\n",
+       "now            11\n",
+       "me             10\n",
+       "like           10\n",
+       "a               8\n",
+       "we              7\n",
+       "shape           6\n",
+       "follow          6\n",
+       "day             6\n",
+       "lead            6\n",
+       "i               6\n",
+       "of              6\n",
+       "every           6\n",
+       "brand           6\n",
+       "new             6\n",
+       "discovering     6\n",
+       "something       6\n",
+       "               ..\n",
+       "slow            1\n",
+       "sweet           1\n",
+       "dance           1\n",
+       "hand            1\n",
+       "trust           1\n",
+       "family          1\n",
+       "week            1\n",
+       "date            1\n",
+       "at              1\n",
+       "stop            1\n",
+       "best            1\n",
+       "our             1\n",
+       "give            1\n",
+       "where           1\n",
+       "i'll            1\n",
+       "all             1\n",
+       "isn't           1\n",
+       "make            1\n",
+       "lover           1\n",
+       "radio           1\n",
+       "place           1\n",
+       "chance          1\n",
+       "can             1\n",
+       "club            1\n",
+       "shots           1\n",
+       "it              1\n",
+       "out             1\n",
+       "van             1\n",
+       "let             1\n",
+       "bar             1\n",
+       "Length: 140, dtype: int64"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "word_freq2.sort_values('word', ascending=False)"
+    "final_word_freq2 = word_freq2.sort_values(ascending=False)\n",
+    "final_word_freq2 "
    ]
   },
   {
@@ -262,30 +388,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<bound method IndexOpsMixin.item of on             40\n",
+       "come           37\n",
+       "my             33\n",
+       "in             27\n",
+       "love           25\n",
+       "and            23\n",
+       "i'm            23\n",
+       "with           22\n",
+       "your           21\n",
+       "the            18\n",
+       "body           17\n",
+       "be             16\n",
+       "you            16\n",
+       "baby           14\n",
+       "now            11\n",
+       "me             10\n",
+       "like           10\n",
+       "a               8\n",
+       "we              7\n",
+       "shape           6\n",
+       "follow          6\n",
+       "day             6\n",
+       "lead            6\n",
+       "i               6\n",
+       "of              6\n",
+       "every           6\n",
+       "brand           6\n",
+       "new             6\n",
+       "discovering     6\n",
+       "something       6\n",
+       "               ..\n",
+       "slow            1\n",
+       "sweet           1\n",
+       "dance           1\n",
+       "hand            1\n",
+       "trust           1\n",
+       "family          1\n",
+       "week            1\n",
+       "date            1\n",
+       "at              1\n",
+       "stop            1\n",
+       "best            1\n",
+       "our             1\n",
+       "give            1\n",
+       "where           1\n",
+       "i'll            1\n",
+       "all             1\n",
+       "isn't           1\n",
+       "make            1\n",
+       "lover           1\n",
+       "radio           1\n",
+       "place           1\n",
+       "chance          1\n",
+       "can             1\n",
+       "club            1\n",
+       "shots           1\n",
+       "it              1\n",
+       "out             1\n",
+       "van             1\n",
+       "let             1\n",
+       "bar             1\n",
+       "Length: 140, dtype: int64>"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your code here\n"
+    "# Your code here\n",
+    "final_freq2 = word_freq2.sort_values( ascending=False).item\n",
+    "final_freq2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-668f184b4071>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mdf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrany\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvalue_counts\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
